--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='style.css'>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <meta charset="utf-8"/>
   <script src="./app.js"></script>
 </head>
 <body>
+
+<div class="bg"></div>
+<div class="header" id='pronav'>
+  <div class='logo' id='logo'>
+    <p style='font-size:35px;'>lunAr-creator</p>
+  </div>
+  <input type="checkbox" id="chk">
+  <label for="chk" class="show-menu-btn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <ul class="menu" id='navbar'>
+    <a href="#home" onclick="navbarFunc()">Home</a>
+    <a href="#about" onclick="navbarFunc()">About</a>
+    <a href="projects" onclick="navbarFunc()">Projects</a>
+    <a href="#useful_links" onclick="navbarFunc()">Useful Links</a>
+    <a href="#contact" onclick="navbarFunc()">Contact</a>
+    <label for="chk" class="hide-menu-btn">
+      <i class="fas fa-times"></i>
+    </label>
+  </ul>
+</div>
+
+</body>
+</html>
