added app.js and updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -31,5 +31,22 @@
   </ul>
 </div>
 
+<div class="main" id="home">
+  <h2>About Me</h2>
+  <hr/>
+  <p>
+    Hi there! I'm lunAr-creator! And I love programming. Designing websites,
+    coding and solving problems are things that I like to do on a daily basis.
+    I am currently working on my library <em><strong>pw-gen</strong></em> which
+    is used for generating strong randomised passwords. Check it out in the pro
+    jects section if you want to learn more about it.
+  </p>
+</div>
+
+<div class="main" id="section2">
+  <h2>Section 2</h2>
+  <a href="#section1">Click Me to Smooth Scroll to Section 1 Above</a>
+</div>
+
 </body>
 </html>
