--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <meta charset="utf-8"/>
-  <script src="./app.js"></script>
 </head>
 <body>
 
-<div class="bg"></div>
+<div class="bg" id='home'></div>
 <div class="header" id='pronav'>
   <div class='logo' id='logo'>
     <p style='font-size:35px;'>lunAr-creator</p>
   </div>
   <input type="checkbox" id="chk">
-  <label for="chk" class="show-menu-btn">
+  <label for="chk" class="show-menu-btn" id='hamburger'>
     <i class="fas fa-bars"></i>
   </label>
   <ul class="menu" id='navbar'>
     <a href="#home" onclick="navbarFunc()">Home</a>
     <a href="#about" onclick="navbarFunc()">About</a>
-    <a href="projects" onclick="navbarFunc()">Projects</a>
+    <a href="#projects" onclick="navbarFunc()">Projects</a>
     <a href="#useful_links" onclick="navbarFunc()">Useful Links</a>
     <a href="#contact" onclick="navbarFunc()">Contact</a>
     <label for="chk" class="hide-menu-btn">
@@ -31,21 +30,26 @@
   </ul>
 </div>
 
-<div class="main" id="home">
-  <h2>About Me</h2>
+<script src="app.js"></script>
+
+<div class="main" id="about" id="startchange">
+  <h2 style='margin-top: 90px;'>About Me</h2>
   <hr/>
   <p>
     Hi there! I'm lunAr-creator! And I love programming. Designing websites,
     coding and solving problems are things that I like to do on a daily basis.
     I am currently working on my library <em><strong>pw-gen</strong></em> which
-    is used for generating strong randomised passwords. Check it out in the pro
-    jects section if you want to learn more about it.
+    is used for generating strong randomised passwords. Check it out in the
+    projects section if you want to learn more about it.
   </p>
 </div>
 
-<div class="main" id="section2">
-  <h2>Section 2</h2>
-  <a href="#section1">Click Me to Smooth Scroll to Section 1 Above</a>
+<div class="main" id="projects">
+  <h2>Projects</h2>
+  <hr/>
+  <p>
+    <iframe height="800px" width="100%" src="https://replit.com/@lunArcreator/VeneratedImpracticalDominspector?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+  </p>
 </div>
 
 </body>
