--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class="bg" id='home'></div>
+
 <div class="header" id='pronav'>
   <div class='logo' id='logo'>
     <p style='font-size:35px;'>lunAr-creator</p>
@@ -19,11 +20,11 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul class="menu" id='navbar'>
-    <a href="#home" onclick="navbarFunc()">Home</a>
-    <a href="#about" onclick="navbarFunc()">About</a>
-    <a href="#projects" onclick="navbarFunc()">Projects</a>
-    <a href="#useful_links" onclick="navbarFunc()">Useful Links</a>
-    <a href="#contact" onclick="navbarFunc()">Contact</a>
+    <a href="#home" onclick="navbarFunc()" id="home-tag1">Home</a>
+    <a href="#about" onclick="navbarFunc()" id="home-tag2">About</a>
+    <a href="#projects" onclick="navbarFunc()" id="home-tag3">Projects</a>
+    <a href="#useful_links" onclick="navbarFunc()" id="home-tag4">Useful Links</a>
+    <a href="#contact" onclick="navbarFunc()" id="home-tag5">Contact</a>
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
     </label>
@@ -33,7 +34,7 @@
 <script src="app.js"></script>
 
 <div class="main" id="about" id="startchange">
-  <h2 style='margin-top: 90px;'>About Me</h2>
+  <h2>About Me</h2>
   <hr/>
   <p>
     Hi there! I'm lunAr-creator! And I love programming. Designing websites,
