--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul class="menu" id='navbar'>
-    <a href="#home" onclick="navbarFunc()" id="home-tag1">Home</a>
-    <a href="#about" onclick="navbarFunc()" id="home-tag2">About</a>
-    <a href="#projects" onclick="navbarFunc()" id="home-tag3">Projects</a>
-    <a href="#useful_links" onclick="navbarFunc()" id="home-tag4">Useful Links</a>
-    <a href="#contact" onclick="navbarFunc()" id="home-tag5">Contact</a>
+    <a href="#home" onclick="navbarFunc()">Home</a>
+    <a href="#about" onclick="navbarFunc()">About</a>
+    <a href="#projects" onclick="navbarFunc()">Projects</a>
+    <a href="#useful_links" onclick="navbarFunc()">Useful Links</a>
+    <a href="#contact" onclick="navbarFunc()">Contact</a>
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
     </label>
@@ -49,7 +49,7 @@
   <h2>Projects</h2>
   <hr/>
   <p>
-    <iframe height="800px" width="100%" src="https://replit.com/@lunArcreator/VeneratedImpracticalDominspector?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+    <div style="text-align:center;"><iframe height="800px" width="100%" src="https://replit.com/@lunArcreator/VeneratedImpracticalDominspector?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></div>
   </p>
 </div>
 
