updated index.html, style.css and app.js

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h2>Projects</h2>
   <hr/>
   <p>
-    <div style="text-align:center;"><iframe height="800px" width="100%" src="https://replit.com/@lunArcreator/VeneratedImpracticalDominspector?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></div>
+<!--     <div style="text-align:center;"><iframe height="800px" width="100%" src="https://replit.com/@lunArcreator/VeneratedImpracticalDominspector?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></div> -->
   </p>
 </div>
 
