--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <script src="app.js"></script>
 
 <div class="main" id="about" id="startchange">
-  <h2>About Me</h2>
+  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</h2>
   <hr/>
   <p>
     Hi there! I'm lunAr-creator! And I love programming. Designing websites,
@@ -46,11 +46,66 @@
 </div>
 
 <div class="main" id="projects">
-  <h2>Projects</h2>
+  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</h2>
   <hr/>
   <p>
 <!--     <div style="text-align:center;"><iframe height="800px" width="100%" src="https://replit.com/@lunArcreator/VeneratedImpracticalDominspector?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></div> -->
   </p>
+  <div class="row">
+  <div class="column">
+    <div class="card">
+      <h3>pw-gen</h3>
+      <img style="width:100%;padding-top: 8px;" src="background6.png"/>
+      <p style="padding: 10px;">pw-gen is a library that deals with generating passwords which strong and randomised using the secrets library simaltaeneously.</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <h3>Card 2</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Card 3</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Card 4</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="main" id="useful_links">
+  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-link"></i>Useful Links</h2>
+  <hr/>
+  <p>
+  </p>
+</div>
+
+<div class="main" id="contact">
+  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-pen"></i>Contact</h2>
+  <hr/>
+  <p>
+  </p>
+</div>
+
+<br></br>
+<div class='footer'>
+  <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
+  <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow" style='font-size:35px'></i></a>
+  <br></br>
+  <p style="font-size: 16px;">Copyright © 2021 lunAr-creator - Website Design by me (who else? :D)</p>
 </div>
 
 </body>
