--- a/index.html
+++ b/index.html
@@ -34,27 +34,32 @@
 <script src="app.js"></script>
 
 <div class="main" id="about" id="startchange">
-  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</h2>
+  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
   <hr/>
-  <p>
-    Hi there! I'm lunAr-creator! And I love programming. Designing websites,
-    coding and solving problems are things that I like to do on a daily basis.
-    I am currently working on my library <em><strong>pw-gen</strong></em> which
-    is used for generating strong randomised passwords. Check it out in the
-    projects section if you want to learn more about it.
+  <p style='margin-top: 20px;'>
+    Hello stranger! You have just visited my website and you are wondering what it is about? Well then, this is the most perfect place for you to be right now! This is a personal portfolio about myself. Lets just say that, for privacy reasons, my name is lunAr-creator. Here you will get to know how I started coding and what inspired me! Furthermore, you will be able to view my most recent projects and use my code for ideas, aswell as to watch my video tutorials on programming! If you have any queries, questions or suggestions please email me by going to the contact section.
+
+    <br></br>
+
+    Lets take a trip down memory lane, and see how I have developed my coding skills! I started coding all the way back in primary school. Making a ladybug move around a couple of grey carpet tiles to get to a specific destination. I always found it thrilling to watch my code work, and the ladybug find its destination! After that, when I moved to Junior school, things started to get a bit more exciting. My IT teacher decided to introduce us to a coding website called 'Scratch'. No doubt you have heard about it. Scratch is a block-based visual programming language and website targeted primarily at children. Users of the site can create online projects using a block-like interface. The service is developed by the MIT Media Lab, has been translated into 70+ languages, and is used in most parts of the world. 
+
+    <br></br>
+
+    During my time at Junior school, i took a Scratch coding course in which we learned important aspects on how to use it, and what i can do with it. Needless to say, i thoroughly enjoyed myself, and made some friends along the way. In the start of secondary school, my Father started teaching me and one of my friends C#. It was great and we even managed to program some really cool things such as an arethmetic calculator and a grades calculator. Unfortunately, C# dwindled out during the summer: My Father had aquired a new job and we eventually moved to an entirely different place to where we were before. But not all was in vain. I had learnt a bit of HTML5 and CSS3 in my new school, which is how I have made this website, where you a reading all about me, right now. After that, my Dad started teaching me Python. My favourite programming language so far. During quarantine, i have made use of all the spare time i have had and sat down and programmed for hours on end. Needless to say, i think it was very fruitful. I have coded calculators with GUI's, Binary converters, Password Vaults and Games. I even went as far as creating my own Youtube channel to share and promote my projects. 
+
+    <br></br>
+
+    So considering all of this, I think I have had some good fun in the world of programming: and i do not intend to stop there. So in the end, i have had quite a good experience. Don't you think? And as Linus Torvalds said: 'Talk is cheap. Show me the code'. So, with that said, why are you still reading this! Go away and checkout my coding projects! 
   </p>
 </div>
 
-<div class="main" id="projects">
-  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</h2>
+<div class="main headers" id="projects">
+  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
   <hr/>
-  <p>
-<!--     <div style="text-align:center;"><iframe height="800px" width="100%" src="https://replit.com/@lunArcreator/VeneratedImpracticalDominspector?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></div> -->
-  </p>
-  <div class="row">
+  <div style='margin-top: 20px;' class="row">
   <div class="column">
     <div class="card">
-      <h3>pw-gen</h3>
+      <p style='font-size: 25px;'>pw-gen</p>
       <img style="width:100%;padding-top: 8px;" src="background6.png"/>
       <p style="padding: 10px;">pw-gen is a library that deals with generating passwords which strong and randomised using the secrets library simaltaeneously.</p>
     </div>
@@ -62,7 +67,7 @@
 
   <div class="column">
     <div class="card">
-      <h3>Card 2</h3>
+      <p style="font-size: 25px;">Card 2</p>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -70,7 +75,7 @@
   
   <div class="column">
     <div class="card">
-      <h3>Card 3</h3>
+      <p style="font-size: 25px;">Card 3</p>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -78,7 +83,7 @@
   
   <div class="column">
     <div class="card">
-      <h3>Card 4</h3>
+      <p style="font-size: 25px;">Card 4</p>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -86,16 +91,15 @@
 </div>
 </div>
 
-<div class="main" id="useful_links">
-  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-link"></i>Useful Links</h2>
+<div class="main headers" id="useful_links">
+  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-link"></i>Useful Links</p>
   <hr/>
-  <p>
+  <p style='margin-top: 20px;'>Here you can use the links that I have found useful whilst I have been learning python.
   </p>
 </div>
 
-<div class="main" id="contact">
-  <h2><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-pen"></i>Contact</h2>
-  <hr/>
+<div class="main headers" id="contact">
+  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-pen"></i>Contact<hr/></p>
   <p>
   </p>
 </div>
