--- a/index.html
+++ b/index.html
@@ -37,19 +37,27 @@
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
   <hr/>
   <p style='margin-top: 20px;'>
-    Hello stranger! You have just visited my website and you are wondering what it is about? Well then, this is the most perfect place for you to be right now! This is a personal portfolio about myself. Lets just say that, for privacy reasons, my name is lunAr-creator. Here you will get to know how I started coding and what inspired me! Furthermore, you will be able to view my most recent projects and use my code for ideas, aswell as to watch my video tutorials on programming! If you have any queries, questions or suggestions please email me by going to the contact section.
+    Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know how I started coding. Furthermore, you will be able to view my most recent projects and tinker with my code!
 
     <br></br>
 
-    Lets take a trip down memory lane, and see how I have developed my coding skills! I started coding all the way back in primary school. Making a ladybug move around a couple of grey carpet tiles to get to a specific destination. I always found it thrilling to watch my code work, and the ladybug find its destination! After that, when I moved to Junior school, things started to get a bit more exciting. My IT teacher decided to introduce us to a coding website called 'Scratch'. No doubt you have heard about it. Scratch is a block-based visual programming language and website targeted primarily at children. Users of the site can create online projects using a block-like interface. The service is developed by the MIT Media Lab, has been translated into 70+ languages, and is used in most parts of the world. 
+    Lets take a trip down memory lane. I started programming all the way back in primary school. Making a ladybug move around a couple of grey carpet tiles to get to a specific destination whilst avoiding objects in its path. I always found it thrilling to watch it work. After that, when I moved to Junior school, things started to get a bit more exciting. My IT teacher decided to introduce us to a platform called 'Scratch'. No doubt you have heard about it. Scratch is a block-based visual programming language and website targeted primarily at children.
 
     <br></br>
 
-    During my time at Junior school, i took a Scratch coding course in which we learned important aspects on how to use it, and what i can do with it. Needless to say, i thoroughly enjoyed myself, and made some friends along the way. In the start of secondary school, my Father started teaching me and one of my friends C#. It was great and we even managed to program some really cool things such as an arethmetic calculator and a grades calculator. Unfortunately, C# dwindled out during the summer: My Father had aquired a new job and we eventually moved to an entirely different place to where we were before. But not all was in vain. I had learnt a bit of HTML5 and CSS3 in my new school, which is how I have made this website, where you a reading all about me, right now. After that, my Dad started teaching me Python. My favourite programming language so far. During quarantine, i have made use of all the spare time i have had and sat down and programmed for hours on end. Needless to say, i think it was very fruitful. I have coded calculators with GUI's, Binary converters, Password Vaults and Games. I even went as far as creating my own Youtube channel to share and promote my projects. 
+    Next, I took a Scratch coding course in which we learned important aspects of programming, and what i can do with it. Needless to say, i thoroughly enjoyed myself, and made some friends along the way. In the start of secondary school, I started learning C#. 
 
     <br></br>
 
-    So considering all of this, I think I have had some good fun in the world of programming: and i do not intend to stop there. So in the end, i have had quite a good experience. Don't you think? And as Linus Torvalds said: 'Talk is cheap. Show me the code'. So, with that said, why are you still reading this! Go away and checkout my coding projects! 
+    I had learnt a bit of HTML5 and CSS3 in my new school, which is how I have made this website, where you a reading all about me, right now. After that, my Dad started teaching me Python. My favourite programming language so far. 
+
+    <br></br>
+
+    During quarantine, I have made use of all the spare time i have had and sat down and programmed for hours on end. Needless to say, i think it was very fruitful. I have made a UI for a calculator, made some text-based games, solved some problems and made my first python library.
+
+    <br></br>
+
+    So considering all of this, I think I have had some good fun in the world of programming: and i do not intend to stop there. So in the end, i have had quite a good experience. Don't you think? And as Linus Torvalds said: 'Talk is cheap. Show me the code'. So, with that said, why are you still reading this! Go away and checkout my projects :D ! 
   </p>
 </div>
 
@@ -61,7 +69,7 @@
     <div class="card">
       <p style='font-size: 25px;'>pw-gen</p>
       <img style="width:100%;padding-top: 8px;" src="background6.png"/>
-      <p style="padding: 10px;">pw-gen is a library that deals with generating passwords which strong and randomised using the secrets library simaltaeneously.</p>
+      <p style="padding: 10px;">pw-gen is a library that deals with generating strong randomised passwords. This is acheived with the cryptographically secure <b><i>secrets</i></b> library.</p>
     </div>
   </div>
 
