updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -64,50 +64,27 @@
 <div class="main headers" id="projects">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
   <hr/>
-  <div style='margin-top: 20px;' class="row">
-  <div class="column">
-    <div class="card">
-      <p style='font-size: 25px;'>pw-gen</p>
-      <img style="width:100%;padding-top: 8px;" src="background6.png"/>
-      <p style="padding: 10px;">pw-gen is a library that deals with generating strong randomised passwords. This is acheived with the cryptographically secure <b><i>secrets</i></b> library.</p>
-    </div>
-  </div>
-
-  <div class="column">
-    <div class="card">
-      <p style="font-size: 25px;">Card 2</p>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <p style="font-size: 25px;">Card 3</p>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <p style="font-size: 25px;">Card 4</p>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-</div>
+  <p>
+  </p>
 </div>
 
 <div class="main headers" id="useful_links">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-link"></i>Useful Links</p>
   <hr/>
   <p style='margin-top: 20px;'>Here you can use the links that I have found useful whilst I have been learning python.
+  <br></br>
+  <p style='font-size: 20px;'>Websites:</p>
+  <p>
+   <a style='text-decoration:underline;color:black;' href='https://www.w3schools.com/python/'>W3 Schools</a>
+  </p>
+
+  </p>
   </p>
 </div>
 
 <div class="main headers" id="contact">
-  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-pen"></i>Contact<hr/></p>
+  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-pen"></i>Contact</p>
+  <hr/>
   <p>
   </p>
 </div>
