--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 <div class="main headers" id="projects">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
   <hr/>
-  <p>
-  </p>
+    <div class='project-card'></div>
+    <div class='project-card'></div>
+    <div class='project-card'></div>
 </div>
 
 <div class="main headers" id="useful_links">
@@ -73,9 +74,10 @@
   <hr/>
   <p style='margin-top: 20px;'>Here you can use the links that I have found useful whilst I have been learning python.
   <br></br>
-  <p style='font-size: 20px;'>Websites:</p>
+  <p style='font-size: 20px;'>Websites:</p> 
   <p>
-   <a style='text-decoration:underline;color:black;' href='https://www.w3schools.com/python/'>W3 Schools</a>
+   <a style='text-decoration:underline;color:black;' href='https://www.w3schools.com/python/'>W3 Schools</a><br>
+   <a style='text-decoration:underline;color:black;' href='https://pythonprinciples.com/'>Python Principles</a>
   </p>
 
   </p>
@@ -93,6 +95,7 @@
 <div class='footer'>
   <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
   <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow" style='font-size:35px'></i></a>
+  <a href="https://www.instagram.com/soma_b73/" target="_blank"><i class="fab fa-instagram" style='font-size:35px;margin-left:20px;'></i></a>
   <br></br>
   <p style="font-size: 16px;">Copyright © 2021 lunAr-creator - Website Design by me (who else? :D)</p>
 </div>
