updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -64,9 +64,36 @@
 <div class="main headers" id="projects">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-code-branch"></i>Projects</p>
   <hr/>
-    <div class='project-card'></div>
-    <div class='project-card'></div>
-    <div class='project-card'></div>
+  <div class="main-card">
+  <ul class="cards">
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="Picture1.png"></div>
+        <div class="card_content">
+          <h2 class="card_title">pw-gen</h2>
+          <p class="card_text">A library for generating strong randomised passwords. </p>
+        </div>
+      </div>
+    </li>
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="Picture1.png"></div>
+        <div class="card_content">
+          <h2 class="card_title">pw-gen</h2>
+          <p class="card_text">A library for generating strong randomised passwords. </p>
+        </div>
+      </div>
+    </li>
+    <li class="cards_item">
+      <div class="card">
+        <div class="card_image"><img src="Picture1.png"></div>
+        <div class="card_content">
+          <h2 class="card_title">pw-gen</h2>
+          <p class="card_text">A library for generating strong randomised passwords. </p>
+        </div>
+      </div>
+    </li>
+</div>
 </div>
 
 <div class="main headers" id="useful_links">
@@ -79,7 +106,6 @@
    <a style='text-decoration:underline;color:black;' href='https://www.w3schools.com/python/'>W3 Schools</a><br>
    <a style='text-decoration:underline;color:black;' href='https://pythonprinciples.com/'>Python Principles</a>
   </p>
-
   </p>
   </p>
 </div>
