updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
       <div class="card">
         <div class="card_image"><img src="Picture1.png"></div>
         <div class="card_content">
-          <h2 class="card_title">pw-gen</h2>
-          <p class="card_text">A library for generating strong randomised passwords. </p>
+          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
+          <p class="card_text">A library for generating strong randomised passwords</p>
+          <div class='project-demo-button'>
+            <a href="default.asp" target="_blank">Project Demo</a>
+          </div>
         </div>
       </div>
     </li>
@@ -79,8 +82,11 @@
       <div class="card">
         <div class="card_image"><img src="Picture1.png"></div>
         <div class="card_content">
-          <h2 class="card_title">pw-gen</h2>
-          <p class="card_text">A library for generating strong randomised passwords. </p>
+          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
+          <p class="card_text">A library for generating strong randomised passwords</p>
+          <div class='project-demo-button'>
+            <a href="default.asp" target="_blank">Project Demo</a>
+          </div>
         </div>
       </div>
     </li>
@@ -88,8 +94,11 @@
       <div class="card">
         <div class="card_image"><img src="Picture1.png"></div>
         <div class="card_content">
-          <h2 class="card_title">pw-gen</h2>
-          <p class="card_text">A library for generating strong randomised passwords. </p>
+          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
+          <p class="card_text">A library for generating strong randomised passwords</p> 
+          <div class='project-demo-button'>
+            <a href="default.asp" target="_blank">Project Demo</a>
+          </div>
         </div>
       </div>
     </li>
