added buttons to project cards

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="#home" onclick="navbarFunc()">Home</a>
     <a href="#about" onclick="navbarFunc()">About</a>
     <a href="#projects" onclick="navbarFunc()">Projects</a>
+    <a href="#blog" onclick="navbarFunc()">Blog</a>
     <a href="#useful_links" onclick="navbarFunc()">Useful Links</a>
     <a href="#contact" onclick="navbarFunc()">Contact</a>
     <label for="chk" class="hide-menu-btn">
@@ -73,7 +74,8 @@
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
           <p class="card_text">A library for generating strong randomised passwords</p>
           <div class='project-demo-button'>
-            <a href="default.asp" target="_blank">Project Demo</a>
+            <a href="default.asp" style="font-size: 15px;" target="_blank">Project Demo</a>
+            <a href="default.asp" style="font-size: 15px;" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
@@ -85,7 +87,8 @@
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
           <p class="card_text">A library for generating strong randomised passwords</p>
           <div class='project-demo-button'>
-            <a href="default.asp" target="_blank">Project Demo</a>
+            <a href="default.asp" style="font-size: 15px;" target="_blank">Project Demo</a>
+            <a href="default.asp" style="font-size: 15px;" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
@@ -97,12 +100,21 @@
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
           <p class="card_text">A library for generating strong randomised passwords</p> 
           <div class='project-demo-button'>
-            <a href="default.asp" target="_blank">Project Demo</a>
+            <a href="default.asp" style="font-size: 15px;" target="_blank">Project Demo</a>
+            <a href="default.asp" style="font-size: 15px;" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
     </li>
 </div>
+</div>
+
+<div class="main headers" id="=blog">
+  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-info"></i>Blog</p>
+  <hr/>
+  <div class='blog-post-card'></div>
+  <div class='blog-post-card'></div>
+  <div class='blog-post-card'></div>
 </div>
 
 <div class="main headers" id="useful_links">
