updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+<title>lunAr-creator</title>
 <div class="bg" id='home'></div>
 
 <div class="header" id='pronav'>
@@ -42,7 +43,7 @@
 
     <br></br>
 
-    Lets take a trip down memory lane. I started programming all the way back in primary school. Making a ladybug move around a couple of grey carpet tiles to get to a specific destination whilst avoiding objects in its path. I always found it thrilling to watch it work. After that, when I moved to Junior school, things started to get a bit more exciting. My IT teacher decided to introduce us to a platform called 'Scratch'. No doubt you have heard about it. Scratch is a block-based visual programming language and website targeted primarily at children.
+    I started programming all the way back in primary school. Making a ladybug move around a couple of grey carpet tiles to get to a specific destination whilst avoiding objects in its path. I always found it thrilling to watch it work. After that, when I moved to Junior school, things started to get a bit more interesting. My IT teacher decided to introduce us to a platform called 'Scratch'. No doubt you have heard about it. Scratch is a block-based visual programming language and website targeted primarily at children.
 
     <br></br>
 
@@ -50,7 +51,7 @@
 
     <br></br>
 
-    I had learnt a bit of HTML5 and CSS3 in my new school, which is how I have made this website, where you a reading all about me, right now. After that, my Dad started teaching me Python. My favourite programming language so far. 
+    I then learnt a bit of HTML and CSS, which is how I have made this website, where you a reading all about me. After that, my Dad started teaching me Python. My favourite programming language so far. 
 
     <br></br>
 
@@ -74,8 +75,8 @@
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
           <p class="card_text">A library for generating strong randomised passwords</p>
           <div class='project-demo-button'>
-            <a href="default.asp" style="font-size: 15px;" target="_blank">Project Demo</a>
-            <a href="default.asp" style="font-size: 15px;" target="_blank">GitHub</a>
+            <a href="pwgen.html" style="font-size: 15px;">Project Demo</a>
+            <a href="https://github.com/lunAr-creator/pw-gen" style="font-size: 15px;" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
@@ -109,7 +110,7 @@
 </div>
 </div>
 
-<div class="main headers" id="=blog">
+<div class="main headers" id="blog">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-info"></i>Blog</p>
   <hr/>
   <div class='blog-post-card'></div>
