updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel='stylesheet' href='style.css'>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="shortcut icon" href="C:\Users\sbenf\Desktop\my_portfolio\logo.ico">
   <meta charset="utf-8"/>
 </head>
 <body>
@@ -24,7 +25,6 @@
     <a href="#home" onclick="navbarFunc()">Home</a>
     <a href="#about" onclick="navbarFunc()">About</a>
     <a href="#projects" onclick="navbarFunc()">Projects</a>
-    <a href="#useful_links" onclick="navbarFunc()">Useful Links</a>
     <a href="#contact" onclick="navbarFunc()">Contact</a>
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
@@ -69,7 +69,7 @@
   <ul class="cards">
     <li class="cards_item">
       <div class="card">
-        <div class="card_image"><img src="Picture1.png"></div>
+        <div class="card_image"><img src="Picture2.png"></div>
         <div class="card_content">
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
           <p class="card_text">A library for generating strong randomised passwords</p>
@@ -107,20 +107,6 @@
       </div>
     </li>
 </div>
-</div>
-
-<div class="main headers" id="useful_links">
-  <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size: 30px;' class="fas fa-link"></i>Useful Links</p>
-  <hr/>
-  <p style='margin-top: 20px;'>Here you can use the links that I have found useful whilst I have been learning python.
-  <br></br>
-  <p style='font-size: 20px;'>Websites:</p> 
-  <p>
-   <a style='text-decoration:underline;color:black;' href='https://www.w3schools.com/python/'>W3 Schools</a><br>
-   <a style='text-decoration:underline;color:black;' href='https://pythonprinciples.com/'>Python Principles</a>
-  </p>
-  </p>
-  </p>
 </div>
 
 <div class="main headers" id="contact">
