--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <div class='footer'>
   <a href="https://github.com/lunAr-creator" target="_blank"><i class="fab fa-github" style='font-size:35px;margin-right:20px;'></i></a>
   <a href="https://stackoverflow.com/users/15277679/lunar-creator?tab=profile" target="_blank"><i class="fab fa-stack-overflow" style='font-size:35px'></i></a>
-  <a href="https://www.instagram.com/soma_b73/" target="_blank"><i class="fab fa-instagram" style='font-size:35px;margin-left:20px;'></i></a>
+  <a href="https://www.instagram.com/_somab_/" target="_blank"><i class="fab fa-instagram" style='font-size:35px;margin-left:20px;'></i></a>
   <br></br>
   <p style="font-size: 16px;">Copyright © 2021 lunAr-creator - Website Design by me (who else? :D)</p>
 </div>
