--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="card">
         <div class="card_image"><img src="Picture2.png"></div>
         <div class="card_content">
-          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
+          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen 0.1.1</p>
           <p class="card_text">A library for generating strong randomised passwords</p>
           <div class='project-demo-button'>
             <a href="https://replit.com/@lunArcreator/Project-Demo-Pw-gen#main.py" style="font-size: 15px;" target="_blank">Project Demo</a>
