--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="#home" onclick="navbarFunc()">Home</a>
     <a href="#about" onclick="navbarFunc()">About</a>
     <a href="#projects" onclick="navbarFunc()">Projects</a>
-    <a href="#contact" onclick="navbarFunc()">Contact</a>
+<!--     <a href="#contact" onclick="navbarFunc()">Contact</a> -->
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
     </label>
@@ -109,12 +109,12 @@
 </div>
 </div>
 
-<div class="main headers" id="contact">
+<!-- <div class="main headers" id="contact">
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;font-size:30px;' class="fas fa-pen"></i>Contact</p>
   <hr/>
   <p>
   </p>
-</div>
+</div> -->
 
 <br></br>
 <div class='footer'>
