--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
     </li>
     <li class="cards_item">
       <div class="card">
-        <div class="card_image"><img src="Picture1.png"></div>
+        <div class="card_image"><img src="yay.jpg"></div>
         <div class="card_content">
-          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">pw-gen</p>
-          <p class="card_text">A library for generating strong randomised passwords</p>
+          <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Project Vanguard UI</p>
+          <p class="card_text">UI concepts for Project Vanguard</p>
           <div class='project-demo-button'>
-            <a href="default.asp" style="font-size:15px;" target="_blank">Project Demo</a>
-            <a href="default.asp" style="font-size:15px;" target="_blank">GitHub</a>
+            <a href="default.asp" style="font-size:15px;" target="_blank">Images</a>
+            <!-- <a href="default.asp" style="font-size:15px;" target="_blank">GitHub</a> -->
           </div>
         </div>
       </div>
