updated index and added gallery

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Project Vanguard UI</p>
           <p class="card_text">UI concepts for Project Vanguard</p>
           <div class='project-demo-button'>
-            <a href="default.asp" style="font-size:15px;" target="_blank">Images</a>
+            <a href="gallery.html" style="font-size:15px;" target="_blank">Images</a>
             <!-- <a href="default.asp" style="font-size:15px;" target="_blank">GitHub</a> -->
           </div>
         </div>
