--- a/pwgen.html
+++ b/pwgen.html
@@ -11,8 +11,10 @@
 
 <title>Project Demo: Pw-gen</title>
 
-<div class='logo-pwgen'>
-	<p><a href="index.html#projects"><i style='margin-left:20px;margin-right:20px;cursor:pointer;font-size:30px;' class="fas fa-arrow-left"></i></a><div class='logo-pwgen' style='margin-left:60px;font-size:30px;top:-1px;'>Back to projects</div></p>
+<div class='header' id='pronav'>
+	<div class='logo-pwgen' id='logo'>
+		<p><a href="index.html#projects"><i style='margin-left:20px;margin-right:20px;cursor:pointer;font-size:30px;' class="fas fa-arrow-left"></i></a><div class='logo-pwgen' style='margin-left:60px;font-size:30px;top:-1px;'>Back to projects</div></p>
+	</div>
 </div>
 
 <iframe style='margin-top: 80px;' height="862px" width="100%" src="https://replit.com/@lunArcreator/Project-Demo-Pw-gen?lite=true" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
