changed class names

--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 
 <title>lunAr-creator</title>
 
-<div class="header" id='pronav'>
+<div class="header-gallery" id='pronav'>
   <div class='logo' id='logo'>
     <p style='font-size:35px;'>lunAr-creator</p>
   </div>
