--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul class="menu" id='navbar'>
-    <a href="index.html" onclick="navbarFunc()">Home</a>
+    <a href="index.html#projects" onclick="navbarFunc()">Home</a>
 <!--     <a href="#contact" onclick="navbarFunc()">Contact</a> -->
     <label for="chk" class="hide-menu-btn">
       <i class="fas fa-times"></i>
