--- a/gallery.html
+++ b/gallery.html
@@ -56,14 +56,14 @@ div.desc {
   padding: 0 6px;
   float: left;
   width: 24.99999%;
-  margin-top: 100px;
+  margin-top: 25px;
 }
 
 @media only screen and (max-width: 700px) {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
-    margin-top: 100px;
+    margin-top: 25px;
   }
 }
 
@@ -80,6 +80,9 @@ div.desc {
 }
 </style>
 
+
+<p style='font-size:30px;margin-top:100px;margin-left:6px;'>Main Menu design process</p>
+
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="ui.jpg">
@@ -88,7 +91,6 @@ div.desc {
     <div class="desc">Project Vanguard UI Version 1</div>
   </div>
 </div>
-
 
 <div class="responsive">
   <div class="gallery">
