--- a/gallery.html
+++ b/gallery.html
@@ -137,6 +137,14 @@ div.desc {
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="ui v7 p.jpg">
+      <img src="ui v7 p.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Project Vanguard UI Version 7</div>
+  </div>
+</div>
 
 
 </body>
