--- a/gallery.html
+++ b/gallery.html
@@ -146,5 +146,15 @@ div.desc {
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="ui v8.jpg">
+      <img src="ui v8.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Project Vanguard UI Version 8</div>
+  </div>
+</div>
+
+
 
 </body>
