added last version of the main menu

--- a/gallery.html
+++ b/gallery.html
@@ -155,6 +155,16 @@ div.desc {
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="ui v9.jpg">
+      <img src="ui v9.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Project Vanguard UI Version 9</div>
+  </div>
+</div>
+
+
 
 
 </body>
