--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,14 @@ div.desc {
   margin-top: 25px;
 }
 
+.responsiver {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+  margin-top: 25px;
+}
+
+
 @media only screen and (max-width: 700px) {
   .responsive {
     width: 49.99999%;
@@ -71,6 +79,11 @@ div.desc {
   .responsive {
     width: 100%;
   }
+
+  .responsiver {
+    width: 100%;
+    padding-bottom: 100px;
+  }
 }
 
 .clearfix:after {
@@ -81,68 +94,14 @@ div.desc {
 </style>
 
 
-<p style='font-size:30px;margin-top:100px;margin-left:6px;'>Main Menu design process</p>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui.jpg">
-      <img src="ui.jpg" alt="Cinque Terre" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Version 1</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui v2.jpg">
-      <img src="ui v2.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Version 2</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui v3.jpg">
-      <img src="ui v3.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Version 3</div>
-  </div>
-</div>
+<p style='font-size:30px;margin-top:100px;margin-left:6px;'>Main Menu design's</p>
 
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="ui v4.jpg">
       <img src="ui v4.jpg" width="600" height="400">
     </a>
-    <div class="desc">Project Vanguard UI Version 4</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui v6">
-      <img src="ui v6.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Version 5</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui v5.jpg">
-      <img src="ui v5.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Version 6</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui v7 p.jpg">
-      <img src="ui v7 p.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Version 7</div>
+    <div class="desc">Project Vanguard Main Menu UI Design 1</div>
   </div>
 </div>
 
@@ -151,20 +110,56 @@ div.desc {
     <a target="_blank" href="ui v8.jpg">
       <img src="ui v8.jpg" width="600" height="400">
     </a>
-    <div class="desc">Project Vanguard UI Version 8</div>
+    <div class="desc">Project Vanguard Main Menu UI Design 2</div>
+  </div>
+</div>
+
+<div class="responsiver">
+  <div class="gallery">
+    <a target="_blank" href="ui v11.jpg">
+      <img src="ui v11.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Project Vanguard Main Menu UI Design 3</div>
+  </div>
+</div>
+
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<p class='gallerh' style='font-size:30px;margin-left:6px;'>Loading / Idle Screen Designs</p>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="ls ui v3.jpg">
+      <img src="ls ui v3.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Project Vanguard UI Design 1</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="ui v9.jpg">
-      <img src="ui v9.jpg" width="600" height="400">
+    <a target="_blank" href="ls ui v2.jpg">
+      <img src="ls ui v2.jpg" width="600" height="400">
     </a>
-    <div class="desc">Project Vanguard UI Version 9</div>
+    <div class="desc">Project Vanguard UI Design 2</div>
   </div>
 </div>
 
-
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="ls ui v1.jpg">
+      <img src="ls ui v1.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Project Vanguard UI Design 3</div>
+  </div>
+</div>
 
 
 </body>
