--- a/gallery.html
+++ b/gallery.html
@@ -161,5 +161,25 @@ div.desc {
   </div>
 </div>
 
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<p class='gallerh' style='font-size:30px;margin-left:6px;'>Score Board Designs</p>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="over_game_score.jpg">
+      <img src="over_game_score.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Main Score Board Design Concept 1 (Attrition)</div>
+  </div>
+</div>
+
 
 </body>
