--- a/index.html
+++ b/index.html
@@ -38,27 +38,19 @@
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
   <hr/>
   <p style='margin-top: 20px;'>
-    Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know how I started coding. Furthermore, you will be able to view my most recent projects and tinker with my code!
+    Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know how I started coding and what I have made, including some of my UI (concept) contributions to Project Vanguard. Furthermore, you will be able to view my most recent projects and tinker with my code!
 
     <br></br>
 
-    I started programming all the way back in primary school. Making a ladybug move around a couple of grey carpet tiles to get to a specific destination whilst avoiding objects in its path. I always found it thrilling to watch it work. After that, when I moved to Junior school, things started to get a bit more interesting. My IT teacher decided to introduce us to a platform called 'Scratch'. No doubt you have heard about it. Scratch is a block-based visual programming language and website targeted primarily at children.
+    I have HTML, CSS, and Javascript skills from Highschool, including scratch and C# which got me started with programming. My weapon of choice at the moment is Python, which I have been learning for a large part of the lockdown.
 
     <br></br>
 
-    Next, I took a Scratch coding course in which we learned important aspects of programming, and what i can do with it. Needless to say, i thoroughly enjoyed myself, and made some friends along the way. In the start of secondary school, I started learning C#. 
+    During this time, I have made use of all the spare time i have had and sat down and programmed for hours on end. Needless to say, i think it was very fruitful. I have made a UI for a calculator, made some text-based games, solved some problems and made my first python library.
 
     <br></br>
 
-    I then learnt a bit of HTML and CSS, which is how I have made this website, where you a reading all about me. After that, my Dad started teaching me Python. My favourite programming language so far. 
-
-    <br></br>
-
-    During quarantine, I have made use of all the spare time i have had and sat down and programmed for hours on end. Needless to say, i think it was very fruitful. I have made a UI for a calculator, made some text-based games, solved some problems and made my first python library.
-
-    <br></br>
-
-    So considering all of this, I think I have had some good fun in the world of programming: and i do not intend to stop there. So in the end, i have had quite a good experience. Don't you think? And as Linus Torvalds said: 'Talk is cheap. Show me the code'. So, with that said, why are you still reading this! Go away and checkout my projects :D ! 
+    After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I love designing things and of course, I love Titanfall, so applied for a UI Developer position so that I could help out. 
   </p>
 </div>
 
