updated about me section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p style='font-size:30px;margin-top:90px;'><i style='margin-right:20px;color:#AEC6CF;cursor:default;' class="fas fa-address-card"></i>About Me</p>
   <hr/>
   <p style='margin-top: 20px;'>
-    Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know how I started coding and what I have made, including some of my UI (concept) contributions to Project Vanguard. Furthermore, you will be able to view my most recent projects and tinker with my code!
+    Hello stranger! You have just visited my website and you are wondering what it is about? Well, this is my personal portfolio. My (User)name is lunAr-creator. Here you will get to know what programming experience I have, including some of my UI (concept) contributions to Project Vanguard. (Scroll down to Projects for more info)
 
     <br></br>
 
@@ -46,11 +46,11 @@
 
     <br></br>
 
-    During this time, I have made use of all the spare time i have had and sat down and programmed for hours on end. Needless to say, i think it was very fruitful. I have made a UI for a calculator, made some text-based games, solved some problems and made my first python library.
+    During this time, I have made use of all the spare hours i have had and sat down and programmed. Needless to say, i think it was very fruitful. I have made a UI for a calculator, made some text-based games, solved some problems and made my first python library.
 
     <br></br>
 
-    After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I love designing things and of course, I love Titanfall, so applied for a UI Developer position so that I could help out. 
+    After the Ddosing issues surrounding Titanfall 1 and 2 in recent months, I happened to find Project Vanguard on reddit, the community led 'Titanfall 3'. I love designing things and of course, I love Titanfall, so started suggesting ideas and contributing to #ui on the Project Vanguard discord server. After finding a new found love for designing ui's I decided to apply for a UI Developer role and am hoping i cant get it :D
   </p>
 </div>
 
