added 2nd concept for score board

--- a/gallery.html
+++ b/gallery.html
@@ -181,5 +181,15 @@ div.desc {
   </div>
 </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="after_score_board_2.jpg">
+      <img src="after_score_board_2.jpg" width="600" height="400">
+    </a>
+    <div class="desc">Main Score Board Design Concept 2</div>
+  </div>
+</div>
+
+
 
 </body>
