--- a/gallery.html
+++ b/gallery.html
@@ -96,32 +96,24 @@ div.desc {
 
 <p style='font-size:30px;margin-top:100px;margin-left:6px;'>Main Menu design's</p>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui v4.jpg">
-      <img src="ui v4.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard Main Menu UI Design 1</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ui v8.jpg">
-      <img src="ui v8.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard Main Menu UI Design 2</div>
-  </div>
-</div>
-
 <div class="responsiver">
   <div class="gallery">
     <a target="_blank" href="ui v11.jpg">
       <img src="ui v11.jpg" width="600" height="400">
     </a>
-    <div class="desc">Project Vanguard Main Menu UI Design 3</div>
+    <div class="desc">Original Main Menu Design</div>
   </div>
 </div>
+
+<div class="responsiver">
+  <div class="gallery">
+    <a target="_blank" href="ui 1 v5 with blur.jpg">
+      <img src="ui 1 v5 with blur.jpg" width="600" height="400">
+    </a>
+    <div class="desc">New Main Menu Design</div>
+  </div>
+</div>
+
 
 <br></br>
 <br></br>
@@ -133,24 +125,6 @@ div.desc {
 <br></br>
 <br></br>
 <p class='gallerh' style='font-size:30px;margin-left:6px;'>Loading / Idle Screen Designs</p>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ls ui v3.jpg">
-      <img src="ls ui v3.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Design 1</div>
-  </div>
-</div>
-
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="ls ui v2.jpg">
-      <img src="ls ui v2.jpg" width="600" height="400">
-    </a>
-    <div class="desc">Project Vanguard UI Design 2</div>
-  </div>
-</div>
 
 <div class="responsive">
   <div class="gallery">
