--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </li>
     <li class="cards_item">
       <div class="card">
-        <div class="card_image"><img src="yay.jpg"></div>
+        <div class="card_image"><img src="logovan.png"></div>
         <div class="card_content">
           <p style="font-size:30px;padding-top:20px;padding-bottom:20px;">Project Vanguard UI</p>
           <p class="card_text">UI concepts for Project Vanguard</p>
